<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:background="@drawable/background_app"
    android:padding="18dp"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/client"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/textColor"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvClient"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/douglimar"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:layout_height="wrap_content"
        android:text="@string/douglimar_email_com"/>

    <Button
        android:id="@+id/btnSendMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_dinheiro"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="573dp" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/historicoEnvios"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="632dp" />


</LinearLayout>