<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@drawable/background_popup"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="50dp"
    android:paddingBottom="30dp"
    android:layout_gravity="center"
    tools:context=".PopupSendMoneyActivity">

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="X"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPopupProfilePic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/client"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/textColor"/>

        <TextView
            android:id="@+id/tvPopupClientName"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/joaozinho_da_silva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvPopupClientPhoneNo"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/_55_21_9865_7654"/>

    <TextView
        android:id="@+id/tvPopupValueToTransferLabel"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:paddingTop="10dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/valor_a_enviar"/>


    <EditText
        android:id="@+id/edtPopupValue"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rounded_edittext"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:inputType="numberDecimal"
        android:hint="@string/_0_00"
        android:textAlignment="center"
        android:padding="5dp"/>


    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnPopupSendMoney"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:text="@string/enviar"
        android:textSize="18sp"/>

</LinearLayout>


